--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -136,7 +136,7 @@ $home = '';
 				<div class="row">  
 					<div class="box-menu-01 col-lg-3"><?php echo $this->getChildHtml('megaMenu'); ?></div>
 					<div class="box-menu-02 col-lg-9"><?php echo $this->getChildHtml('topMenu'); ?></div>
-					<div><?php //echo $this->getChildHtml('cart_sidebar') ?></div>
+					<div class="box-menu-03 col-lg-3"><?php echo $this->getChildHtml('cart_sidebar') ?></div>
 				</div>
 			</div>  
 		</div>
