原购物车删除

--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -123,7 +123,7 @@ $home = '';
 			<div class="container">
 				<div class="row">
 					<a class="logo" href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>"><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>                    
-					<?php echo $this->getChildHtml('cart_sidebar') ?>				
+					<?php //echo $this->getChildHtml('cart_sidebar') ?>				
 					<?php  echo $this->getChildHtml('searchboxpro'); ?>
 					<?php  //echo $this->getChildHtml('topSearch'); ?>
 				</div>
