--- a/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
@@ -34,7 +34,7 @@
 <div class="cart">
     <div class="page-title title-buttons">
         <h1><?php echo $this->__('Shopping Cart') ?></h1>
-<!--         <?php if(!$this->hasError()): ?>
+        <?php if(!$this->hasError()): ?>
         <ul class="checkout-types">
         <?php foreach ($this->getMethods('top_methods') as $method): ?>
             <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
@@ -42,7 +42,7 @@
             <?php endif; ?>
         <?php endforeach; ?>
         </ul>
-        <?php endif; ?> -->
+        <?php endif; ?>
     </div>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('form_before') ?>
@@ -137,7 +137,7 @@
         </fieldset>
     </form>
     <div class="cart-collaterals">
-<!--         <div class="col2-set">
+        <div class="col2-set">
             <div class="col-1">
                 <?php echo $this->getChildHtml('crosssell') ?>
             </div>
@@ -147,7 +147,7 @@
                 <?php echo $this->getChildHtml('coupon') ?>
                 <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
             </div>
-        </div> -->
+        </div>
         <div class="totals">
             <?php echo $this->getChildHtml('totals'); ?>
             <?php if(!$this->hasError()): ?>
