--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -14,6 +14,17 @@ $uniqued = rand().time();
 $imgWidth = $this->product_image_width;
 $imgHeight = $this->product_image_height;
 
+if ($imgWidth == 229) {
+	$specialpriceArray = array();
+	foreach ($_productCollection as $_product) {
+		$specialprice = Mage::getModel('catalog/product')->load($_product->getId())->getSpecialPrice();
+		if ($specialprice > 0) {
+			array_push($specialpriceArray, $_product);
+		}
+	}
+	$_productCollection = $specialpriceArray;
+}
+
 if ($imgWidth <= 0 || $imgHeight <= 0){
 	$this->product_image_disp = false;
 }
