--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -14,8 +14,9 @@ $uniqued = rand().time();
 $imgWidth = $this->product_image_width;
 $imgHeight = $this->product_image_height;
 
+$dicountArray = array();
 if ($imgWidth == 229) {
-
+	$_productCollection = $dicountArray;
 }
 
 if ($imgWidth <= 0 || $imgHeight <= 0){
