--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -18,11 +18,8 @@ if ($imgWidth == 229) {
 	$dicount;
 	foreach ($_productCollection as $key => $_product) {
 		$specialprice = Mage::getModel('catalog/product')->load($_product->getId())->getSpecialPrice();
-		if ($specialprice > 0) {
-			$dicount = $key;
-		}
+		echo $specialprice;
 	}
-	unset($_productCollection[$dicount]);
 }
 
 if ($imgWidth <= 0 || $imgHeight <= 0){
