--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -15,11 +15,10 @@ $imgWidth = $this->product_image_width;
 $imgHeight = $this->product_image_height;
 
 if ($imgWidth == 229) {
-	$dicount;
 	foreach ($_productCollection as $key => $_product) {
 		$specialprice = Mage::getModel('catalog/product')->load($_product->getId())->getSpecialPrice();
-		if ($specialprice > 0) {
-			unset($_productCollection[$key]);
+		if ($specialprice > 0 && is_array($_productCollection)) {
+			echo "好烦";
 		}
 	}
 }
