--- a/design/frontend/vt-supershop/bdb/layout/catalog.xml
+++ b/design/frontend/vt-supershop/bdb/layout/catalog.xml
@@ -105,7 +105,7 @@ Category layered navigation layout
     <catalog_category_layered translate="label">
         <label>Catalog Category (Anchor)</label>
         <reference name="left">
-            <block type="catalog/layer_view" name="catalog.leftnav" after="currency" template="catalog/layer/view.phtml"/>
+            <!-- <block type="catalog/layer_view" name="catalog.leftnav" after="currency" template="catalog/layer/view.phtml"/> -->
             <block type="cms/block" name="box-banner">
                 <action method="setBlockId"><block_id>box-banner</block_id></action>
             </block>
