--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -14,24 +14,27 @@ $uniqued = rand().time();
 $imgWidth = $this->product_image_width;
 $imgHeight = $this->product_image_height;
 
-if ($imgWidth == 229) {
+$leftArray = array();
+
 	foreach ($_productCollection as $key => $_product) {
 		$specialprice = Mage::getModel('catalog/product')->load($_product->getId())->getSpecialPrice();
-		if ($specialprice > 0) {
+		if ($imgWidth == 229) {
 			echo "111";
-		}
-		if (is_array($_productCollection)) {
-			echo "222";
+			if ($specialprice > 0) {
+				array_push($leftArray, $_product);
+			}
+		}else
+		{
+			array_push($leftArray, $_product);
 		}
 	}
-}
 
 if ($imgWidth <= 0 || $imgHeight <= 0){
 	$this->product_image_disp = false;
 }
 
 ?>
-<?php if(!$_productCollection->count()): ?>
+<?php if(!count($leftArray)): ?>
 	<p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
 <div id="vt_slider<?php echo $uniqued; ?>" class="block vt-slider">
@@ -46,7 +49,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
     	</div>
 	    <div class="container-slider">
 		    <div class="products-grid">
-		    <?php foreach($_productCollection as $_product) : ?>
+		    <?php foreach($leftArray as $_product) : ?>
 		        <?php
 		        $now = date("Y-m-d H:m:s");
 		        $newsFrom= $_product->getNewsFromDate();
