商品列表页不显示价格筛选

--- a/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
@@ -31,7 +31,9 @@
  * @see Mage_Catalog_Block_Layer_View
  */
 ?>
-<?php if($this->canShowBlock()): ?>
+
+<!-- <?php if($this->canShowBlock()): ?> -->
+<?php if(false): ?>
 <div class="block block-layered-nav">
     <div class="block-title">
         <strong><span><?php echo $this->__('Filter selection') ?></span></strong>
