--- a/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
@@ -31,12 +31,10 @@
  * @see Mage_Catalog_Block_Layer_View
  */
 ?>
-
-<!-- <?php if($this->canShowBlock()): ?> -->
-<?php if(false): ?>
+<?php if($this->canShowBlock()): ?>
 <div class="block block-layered-nav">
     <div class="block-title">
-        <strong><span><?php echo $this->__('Filter selection') ?></span></strong>
+        <strong><span><?php echo $this->__('xxxxon') ?></span></strong>
     </div>
     <div class="block-content">
         <?php echo $this->getStateHtml() ?>
