--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -22,9 +22,6 @@ $leftArray = array();
 			if ($specialprice > 0) {
 				array_push($leftArray, $_product);
 			}
-		}else
-		{
-			array_push($leftArray, $_product);
 		}
 	}
 
@@ -32,8 +29,16 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
 	$this->product_image_disp = false;
 }
 
+$finalCollection;
+if ($imgWidth == 229) {
+	$finalCollection = $leftArray;
+}else
+{
+	$finalCollection = $_productCollection;
+}
+
 ?>
-<?php if(!count($leftArray)): ?>
+<?php if(!count($finalCollection)): ?>
 	<p class="note-msg"><?php echo $this->__('There are no products matching the selection.') ?></p>
 <?php else: ?>
 <div id="vt_slider<?php echo $uniqued; ?>" class="block vt-slider">
@@ -48,7 +53,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
     	</div>
 	    <div class="container-slider">
 		    <div class="products-grid">
-		    <?php foreach($leftArray as $_product) : ?>
+		    <?php foreach($finalCollection as $_product) : ?>
 		        <?php
 		        $now = date("Y-m-d H:m:s");
 		        $newsFrom= $_product->getNewsFromDate();
