--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
@@ -43,6 +43,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
 		        $special_from_date = $_product->getSpecialFromDate();
 		        $special_to_date = $_product->getSpecialToDate();    
 		        ?>
+		        <div class="owlitem">
 		        <div class="item">
 		        	<?php   
 		                if($newsFrom != ''){                            
@@ -101,6 +102,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
                     
                 </div><!--end item wrap -->
 		        </div>
+		    </div>
 		    <?php endforeach; ?>
 		    </div>
 		</div>
