--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
@@ -43,7 +43,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
 		        $special_from_date = $_product->getSpecialFromDate();
 		        $special_to_date = $_product->getSpecialToDate();    
 		        ?>
-		        <div class="owlitem">
+		        <div class="itemBox">
 		        <div class="item">
 		        	<?php   
 		                if($newsFrom != ''){                            
