--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -62,6 +62,7 @@ if ($imgWidth == 229) {
 		        $special_from_date = $_product->getSpecialFromDate();
 		        $special_to_date = $_product->getSpecialToDate();   
 		        ?>
+		        <div class="itemBox">
 		        <div class="item">
 		        	<?php
 		        		echo $specialprice;   
@@ -120,6 +121,7 @@ if ($imgWidth == 229) {
                     
                 	</div><!--end item wrap -->
 		        </div>
+		    </div>
 		    <?php endforeach; ?>
 		    </div>
 		</div>
