--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/selectGrid.phtml
@@ -64,7 +64,7 @@ if ($imgWidth == 229) {
 		        ?>
 
 		        <div style="float: left;">
-		        <div class="item" style="float:none">
+		        <div class="item">
 		        	<?php   
 		                if($newsFrom != ''){                            
 		                if (($now>=$newsFrom && $now<=$newsTo)||($now>=$newsFrom && $newsTo =='')){  ?>
