商品详情页隐藏按钮

--- a/design/frontend/vt-supershop/bdb/template/catalog/product/view.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/product/view.phtml
@@ -114,7 +114,8 @@ global $var_vttheme;
                     </div>
                 </div>
             </div>
-            <div class="wrap-addthis">          
+            <!-- 隐藏这些按钮.. -->
+            <div class="wrap-addthis" style="display:none">          
                 <!-- AddThis Button BEGIN -->
                     <div class="addthis_toolbox addthis_default_style ">
                     <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
