--- a/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/layer/view.phtml
@@ -34,7 +34,7 @@
 <?php if($this->canShowBlock()): ?>
 <div class="block block-layered-nav">
     <div class="block-title">
-        <strong><span><?php echo $this->__('xxxxon') ?></span></strong>
+        <strong><span><?php echo $this->__('Filter selection') ?></span></strong>
     </div>
     <div class="block-content">
         <?php echo $this->getStateHtml() ?>
