--- a/design/frontend/vt-supershop/default/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/default/template/vt/megamenu/megamenu.phtml
@@ -61,7 +61,7 @@ $home = '';
 				id="<?php echo $prefix.$itemStartLv->getId()?>">
 
 				<span class="menu-title">
-					<?php echo $itemStartLv->getTitle() ?>
+					<?php echo $this->__($itemStartLv->getTitle()) ?>
 				</span>
 			</a>
 			<?php
