--- a/design/frontend/vt-supershop/bdb/template/vt/searchboxpro/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/searchboxpro/default.phtml
@@ -35,7 +35,7 @@ $uniqued = rand().time();?>
 										}?>								
 										<li class="level-<?php echo $cat['level'];?>">
 											<?php echo trim($cat['label']); ?>
-											<input type="hidden" name="id<?php echo $uniqued; ?>" value="<?php echo $cat['value']; ?>">
+											<!-- <input type="hidden" name="id<?php echo $uniqued; ?>" value="<?php echo $cat['value']; ?>"> -->
 										</li>
 									<?php endforeach;?>	
 								</ul>
