--- a/design/frontend/vt-supershop/bdb/template/page/1column.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/1column.phtml
@@ -327,6 +327,7 @@ global $var_vttheme;
                 </div>    
             <?php endif; ?>
         </div>
+        <img src="/media/testMedia/test_home_logo.png" alt="" />
         <?php echo $this->getAbsoluteFooter() ?>
     </body>
 </html>
