--- a/design/frontend/base/default/template/vt/fconnector/link.phtml
+++ b/design/frontend/base/default/template/vt/fconnector/link.phtml
@@ -1,6 +1,6 @@
 <?php if(Mage::helper('fconnector')->isActivated()):?>
 <script src='//static.ak.fbcdn.net/connect.php/js/FB.Share' type='text/javascript'></script>
-<script src='//platform.twitter.com/widgets.js' type='text/javascript'></script>
+<!-- <script src='//platform.twitter.com/widgets.js' type='text/javascript'></script> -->
 <script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
 <style>
 .twitter-share-button {width:90px !important; overflow:hidden}
