--- a/design/frontend/vt-supershop/bdb/template/catalog/navigation/top.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/navigation/top.phtml
@@ -43,7 +43,7 @@ global $var_vttheme;
     <div class="header-nav">       
         <ul id="mainnav" class="mainnav">
         <li <?php echo $homecls;?>>
-          <a <?php echo $homecls;?> href="<?php echo $this->getUrl('') ?>" title="Home"><span>Home</span></a>
+          <a <?php echo $homecls;?> href="<?php echo $this->getUrl('') ?>" title="Home"><span><?php echo $this->__('Home') ?></span></a>
         </li>
         <?php foreach ($this->getStoreCategories() as $_category): ?>
             <?php echo $this->drawItem($_category) ?>
