--- a/design/frontend/vt-supershop/bdb/template/page/html/footer.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/footer.phtml
@@ -42,7 +42,7 @@ $home = '';
 	        		<div class="container">
 						<div class="row">
 					        <div class="row">    
-								
+								<img src="<?php echo $this->getSkinUrl('images/home_bottom_slogen.png') ?>">
 							</div>
 						</div>
 					</div>
