--- a/design/frontend/vt-supershop/bdb/template/page/2columns-left.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/2columns-left.phtml
@@ -174,6 +174,7 @@
                     </div>                    
                 </div>    
                 <?php endif; ?>
+                <?php echo $this->getChildHtml('footer'); ?> 
 		</div>
         <?php echo $this->getChildHtml('global_cookie_notice') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>    
