--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -100,7 +100,7 @@ $home = '';
        		$(".mega-nav").hide();
        <?php }?>
 	   <?php if($isHomepage == 'home-04'){ ?>		                        
-       		$(".mega-nav").show();
+       		$(".mega-nav").hide();
        <?php }?>
         $('.vertical-menu .btn-menu').click(function(){        	
             $(".mega-nav").slideToggle("fast");
