购物车悬浮框。view my cart翻译。paypal插件显示注销

--- a/design/frontend/vt-supershop/bdb/template/checkout/cart/sidebar.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart/sidebar.phtml
@@ -85,7 +85,7 @@
                     <a class="btn-mycart" href="<?php echo $this->getUrl('checkout/cart') ?>" title="View my cart">
                         <?php echo $this->__("view my cart"); ?>
                     </a>
-                    <?php echo $this->getChildHtml('extra_actions') ?>
+                    <?php //echo $this->getChildHtml('extra_actions') ?>
                     <a href="<?php echo $this->getUrl('checkout/onepage') ?>" title="<?php echo $this->__('Checkout') ?>" class="btn-checkout"> 
                         <?php echo $this->__('Checkout'); ?>
                     </a>
