--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -11,45 +11,77 @@ $config = $this->getConfigObject();
 $uq = rand().time();
 $l = $var_vttheme->getParam('layout_home');
 ?>
-<script type="text/javascript">
-		jQuery(document).ready(function($) {			
-		  $('#vt_slideshow<?php echo $uq ?>').revolution({
-			 delay:<?php echo ($config['delay']); ?>,
-			 startwidth:<?php if($l==1){ echo "1170";}else if($l==2){ echo "880";}else if($l==3){ echo "770";} ?>,
-			 startheight:<?php if($l==1){ echo "400"; }else if($l==2){ echo "390"; }else if($l==3){ echo "360";} ?>,
-	 		 navigationArrows:"<?php echo ($config['navigationArrows']); ?>", 
-			 navigationType:"<?php echo ($config['navigationType']); ?>", 
-			 navigationStyle:"<?php echo ($config['navigationStyle']); ?>",
-	 		<?php if(!$config['autoplay']){?>
-	 		 stopAtSlide:1,
-	 		 stopAfterLoops:0,
-	 		<?php } ?>	
-	 		<?php if($l==1){?>		 
-	 		fullWidth:"on",
-	 		fullScreenOffsetContainer:"#box-content",
-	 		<?php } ?>	
-	 		onHoverStop:"on",
-		  });
-	   });
-</script>
-	<?php if (!empty( $config['pretext'] )): ?>
-		<div class="vt-pretext"><?php echo $config['pretext']; ?></div>
-	<?php endif; ?>
-	<?php 
-	$slides = explode(',', $config['slides_html']);
-	if(count($slides) > 0){
-	?>
-    <div class="vt-slideshow" id="vt_slideshow<?php echo $uq ?>">
-		<ul>
-    	<?php 
-    	for($i=0;$i<count($slides);$i++) {
-    		echo str_replace('</ul>', '', str_replace('<ul>', '', $this->getLayout()->createBlock('cms/block')->setBlockId(trim($slides[$i]))->toHtml()));
-    	}?>
-		</ul>
-		<div class="tp-bannertimer<?php echo ($config['timerbar']=='bottom')?' tp-bottom':'';?>"></div>
 
-    </div>
-    <?php } ?>
-    <?php if($config['posttext']): ?>
-    <div class="vt-posttext"><?php echo $config['posttext'];?></div>
-    <?php endif;?>
+	<div class="box" style="width:100%;height:400px;margin:0px auto;position:relative;">	
+		<div class="pic" style="width:100%;height:400px;overflow:hidden;">
+			<ul>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s1-01.png') center">
+
+				</li>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center">
+
+				</li>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s3-01.png') center">
+
+				</li>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s4-01.png') center">
+
+				</li>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s5-01.png') center">
+
+				</li>
+			</ul>
+		</div>
+		<div class="navv" style="width:100px;height:14px;position:absolute;bottom:10px;left:50%;margin-left:-50px">
+			<ul>
+				<li class="bg" style="list-style-type:none;width:12px;height:12px;float:left;margin-right:5px;cursor:pointer;
+			border:1px solid #fff;"></li>
+				<li style="list-style-type:none;width:12px;height:12px;float:left;margin-right:5px;cursor:pointer;
+			border:1px solid #fff;"></li>
+				<li style="list-style-type:none;width:12px;height:12px;float:left;margin-right:5px;cursor:pointer;
+			border:1px solid #fff;"></li>
+				<li style="list-style-type:none;width:12px;height:12px;float:left;margin-right:5px;cursor:pointer;
+			border:1px solid #fff;"></li>
+				<li style="list-style-type:none;width:12px;height:12px;float:left;margin-right:5px;cursor:pointer;
+			border:1px solid #fff;"></li>
+			</ul>
+		</div>
+	</div>
+	<script type="text/javascript" src="http://bdbbuy.com/js/vt/jquery/jquery.js"></script>
+	<script type="text/javascript">
+		var i = -1;
+		var time=0;
+		junmper();
+		function junmper(){
+			i++;
+			if(i>4)
+			i=0;
+			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
+				$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+				$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+				$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+				$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+					$(".pic ul li").eq(i).find(".img2").css("display","block");
+					$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+				});
+	
+		}
+		time=setInterval("junmper()",3700);
+		$(".navv ul li").click(function(){
+			i=$(this).index();
+			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
+				$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+				$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+				$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+				$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+					$(".pic ul li").eq(i).find(".img2").css("display","block");
+					$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+				});
+	
+		})
+	$(".navv ul li").hover(function(){
+		clearInterval(time);
+	},function(){
+		time=setInterval("junmper()",3700);
+	})
+	</script>
