--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -18,7 +18,7 @@ $l = $var_vttheme->getParam('layout_home');
 				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s1-01.png') center">
 
 				</li>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center">
+				<a href="{{store url='shippingarea'}}"><li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center"></a>
 
 				</li>
 				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s3-01.png') center">
