--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -49,39 +49,42 @@ $l = $var_vttheme->getParam('layout_home');
 	</div>
 
 	<script type="text/javascript">
-		var i = -1;
-		var time=0;
+	var i = -1;
+	var time=0;
+	window.onload=function(){ 
 		junmper();
-		function junmper(){
-			i++;
-			if(i>4)
-			i=0;
-			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
-				$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
-				$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
-				$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
-				$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
-					$(".pic ul li").eq(i).find(".img2").css("display","block");
-					$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
-				});
-	
-		}
 		time=setInterval("junmper()",3700);
 		$(".navv ul li").click(function(){
 			i=$(this).index();
 			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
-				$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
-				$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
-				$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
-				$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
-					$(".pic ul li").eq(i).find(".img2").css("display","block");
-					$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
-				});
-	
+			$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+			$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+			$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+			$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+				$(".pic ul li").eq(i).find(".img2").css("display","block");
+				$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+			});
+
 		})
-	$(".navv ul li").hover(function(){
-		clearInterval(time);
-	},function(){
-		time=setInterval("junmper()",3700);
-	})
+		$(".navv ul li").hover(function(){
+			clearInterval(time);
+		},function(){
+			time=setInterval("junmper()",3700);
+		})
+	} 
+	function junmper(){
+		i++;
+		if(i>4)
+			i=0;
+		$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
+		$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+		$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+		$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+		$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+			$(".pic ul li").eq(i).find(".img2").css("display","block");
+			$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+		});
+
+	}
+
 	</script>
