--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -50,7 +50,7 @@ $l = $var_vttheme->getParam('layout_home');
 
 	<script type="text/javascript">
 
-	$(document).ready(function(){ 
+	jQuery(document).ready(function($){ 
 
 		var i = -1;
 		var time=0;
