--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -19,7 +19,7 @@ $l = $var_vttheme->getParam('layout_home');
 
 				</li>
 				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center">
-					<a style="width:100%;height:400px;display:block" href="{{store url='shippingarea'}}"></a>
+					<a style="width:100%;height:400px;display:block" href="http://bdbbuy.com/index.php/shippingarea/"></a>
 				</li>
 				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s3-01.png') center">
 
