--- a/design/frontend/base/default/layout/oauth.xml
+++ b/design/frontend/base/default/layout/oauth.xml
@@ -116,7 +116,7 @@
     <!-- EOF Reject Authorization -->
 
     <!-- My Applications-->
-    <customer_account>
+<!--     <customer_account>
         <reference name="customer_account_navigation">
             <action method="addLink" translate="label" module="oauth">
                 <name>OAuth Customer Tokens</name>
@@ -132,6 +132,6 @@
         <reference name="my.account.wrapper">
             <block type="oauth/customer_token_list" name="oauth_customer_token_list" template="oauth/customer/token/list.phtml"/>
         </reference>
-    </oauth_customer_token_index>
+    </oauth_customer_token_index> -->
     <!-- EOF My Applications-->
 </layout>
