--- a/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
@@ -154,8 +154,10 @@
             <ul class="checkout-types">
             <?php foreach ($this->getMethods('methods') as $method): ?>
                 <?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-                <li><?php echo $methodHtml; ?></li>
-                <?php endif; ?>
+			<?php if (strcmp($method,'checkout.cart.methods.onepage') == 0): ?>
+                	<li><?php echo $methodHtml; ?></li>
+                	<?php endif; ?>
+		<?php endif; ?>
             <?php endforeach; ?>
             </ul>
             <?php endif; ?>
