--- a/design/frontend/vt-supershop/bdb/layout/catalogsearch.xml
+++ b/design/frontend/vt-supershop/bdb/layout/catalogsearch.xml
@@ -101,10 +101,10 @@ Advanced search results
 
     <catalogsearch_advanced_result translate="label">
         <label>Advanced Search Result</label>
-        <update handle="page_two_columns_right" />
+        <update handle="page_two_columns_left" />
         <!-- Mage_Catalogsearch -->
         <reference name="root">
-            <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/2columns-left.phtml</template></action>
         </reference>
         <reference name="content">
             <block type="catalogsearch/advanced_result" name="catalogsearch_advanced_result" template="catalogsearch/advanced/result.phtml">
