修改分类点击区域

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -102,7 +102,7 @@ $home = '';
 	   <?php if($isHomepage == 'home-04'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
-        $('.vertical-menu .btn-menu').click(function(){        	
+        $('.vertical-menu .title-menu').click(function(){        	
             $(".mega-nav").slideToggle("fast");
         });         
     });
@@ -180,7 +180,7 @@ $home = '';
      	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
-        $('.vertical-menu .btn-menu').click(function(){        	
+        $('.vertical-menu .title-menu').click(function(){        	
             $(".mega-nav").slideToggle("fast");
         });         
     });
