分类栏滚动出来的问题

--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -421,7 +421,7 @@ if($var_vttheme->getParam('menu_ontop')==1){
 				$('.box-header-02').removeClass('subnav-fixed');
 			}else{				
 				$('#vt_menu').removeClass('subnav-fixed');
-				if(ishome != "" && w >= 1024){
+				if((ishome != "" && ishome != "helpcenter" && ishome != "shippingarea") && w >= 1024){
 					$('.mega-nav').show();
 				}
 			}
