--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -60,34 +60,43 @@ $l = $var_vttheme->getParam('layout_home');
 			if(i>4)
 				i=0;
 			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
-			$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
-			$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
-			$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
-			$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
-				$(".pic ul li").eq(i).find(".img2").css("display","block");
-				$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
-			});
+			$(".pic ul li").siblings().css("display","none")
+			$(".pic ul li").eq(i).css("display","block")
+			// $(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+			// $(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+			// $(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+			// $(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+			// 	$(".pic ul li").eq(i).find(".img2").css("display","block");
+			// 	$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+			// });
 
 		}
 
 		junmper();
-		time=setInterval(junmper,3700);
+		time=setInterval(junmper,4700);
 		$(".navv ul li").click(function(){
 			i=$(this).index();
 			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
-			$(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
-			$(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
-			$(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
-			$(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
-				$(".pic ul li").eq(i).find(".img2").css("display","block");
-				$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
-			});
+			$(".pic ul li").siblings().css("display","none")
+			$(".pic ul li").eq(i).css("display","block")
+			// $(".pic ul li").eq(i).fadeIn(100).siblings().fadeOut(100);
+			// $(".pic ul li").eq(i).find(".img1").css({left:"-760px"});
+			// $(".pic ul li").eq(i).find(".img2").css({display:"none",left:"-15px"});
+			// $(".pic ul li").eq(i).find(".img1").animate({left:"0px"},500,function(){
+			// 	$(".pic ul li").eq(i).find(".img2").css("display","block");
+			// 	$(".pic ul li").eq(i).find(".img2").animate({left:"0px"},500);
+			// });
 
+		})
+		$(".pic ul li").hover(function(){
+			clearInterval(time);
+		},function(){
+			time=setInterval("junmper()",4700);
 		})
 		$(".navv ul li").hover(function(){
 			clearInterval(time);
 		},function(){
-			time=setInterval(junmper,3700);
+			time=setInterval(junmper,4700);
 		})
 	});
 
