购物车名称后加规格

--- a/design/frontend/vt-supershop/bdb/template/checkout/cart/item/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart/item/default.phtml
@@ -34,10 +34,11 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
     <td>
         <h2 class="product-name">
         <?php if ($this->hasProductUrl()):?>
-            <a href="<?php echo $this->getProductUrl() ?>"><?php echo $this->escapeHtml($this->getProductName()) ?></a>
+            <a href="<?php echo $this->getProductUrl() ?>"><?php echo $this->escapeHtml($this->getProductName()) ?>  <?php echo $this->escapeHtml($this->getShortDescription()) ?></a>
         <?php else: ?>
             <?php echo $this->escapeHtml($this->getProductName()) ?>
         <?php endif; ?>
+
         </h2>
         <?php if ($_options = $this->getOptionList()):?>
         <dl class="item-options">
