广告图轮播hover暂时取消，改成5秒

--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -73,7 +73,7 @@ $l = $var_vttheme->getParam('layout_home');
 		}
 
 		junmper();
-		time=setInterval(junmper,4700);
+		time=setInterval(junmper,5000);
 		$(".navv ul li").click(function(){
 			i=$(this).index();
 			$(".navv ul li").eq(i).addClass("bg").siblings().removeClass("bg");
@@ -88,16 +88,16 @@ $l = $var_vttheme->getParam('layout_home');
 			// });
 
 		})
-		$(".pic ul li").hover(function(){
-			clearInterval(time);
-		},function(){
-			time=setInterval("junmper()",4700);
-		})
-		$(".navv ul li").hover(function(){
-			clearInterval(time);
-		},function(){
-			time=setInterval(junmper,4700);
-		})
+		// $(".pic ul li").hover(function(){
+		// 	clearInterval(time);
+		// },function(){
+		// 	time=setInterval("junmper()",4700);
+		// })
+		// $(".navv ul li").hover(function(){
+		// 	clearInterval(time);
+		// },function(){
+		// 	time=setInterval(junmper,4700);
+		// })
 	});
 
 	</script>
