--- a/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
+++ b/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
@@ -32,6 +32,15 @@
  */
 ?>
 
+<div>
+        <?php foreach($this->getItems() as $_item): ?>
+        <?php foreach(get_object_vars($_item) as $key => $value): ?>
+} 
+            <?php echo $value ."-----". $key ."-----". "<br>"?>
+        <?php endforeach ?>
+        <?php endforeach ?>
+</div>
+
 <?php
     $methods = $this->getMethods();
     $oneMethod = count($methods) <= 1;
