用户自行检测邮编文案修改

--- a/design/frontend/base/default/template/shippingrestriction/index.phtml
+++ b/design/frontend/base/default/template/shippingrestriction/index.phtml
@@ -1,5 +1,5 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<h1> Search Shipping Locations </h1>
+<h1> 输入我的邮编是否可用 </h1>
 <script>
 function Checkshipping()
 {
@@ -33,5 +33,5 @@ function Checkshipping()
 }
 </script>
 	<input type="text" id="zipcode">
-	<button onclick="Checkshipping()" title="Continue" class="button" type="button"><span><span>Go</span></span></button>
+	<button onclick="Checkshipping()" title="Continue" class="button" type="button"><span><span>查看</span></span></button>
 	<div id ="result"></div>
